<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.zumbolovsky.pesoeimc.MainActivity">

    <TextView
        android:id="@+id/txtSelecao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="67dp"
        android:layout_marginStart="67dp"
        android:layout_marginTop="48dp"
        android:text="@string/textoSelecao"
        android:textAlignment="center"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnPesoHomem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="85dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="48dp"
        android:text="@string/botaoPesoHomem"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSelecao" />

    <Button
        android:id="@+id/btnPesoMulher"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="83dp"
        android:layout_marginStart="83dp"
        android:layout_marginTop="48dp"
        android:text="@string/botaoPesoMulher"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPesoHomem" />

    <Button
        android:id="@+id/btnImc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="83dp"
        android:layout_marginStart="83dp"
        android:layout_marginTop="48dp"
        android:text="@string/botaoImc"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPesoMulher" />

    <Button
        android:id="@+id/btnSobre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="83dp"
        android:layout_marginStart="83dp"
        android:layout_marginTop="48dp"
        android:text="@string/botaoSobre"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnImc" />
</android.support.constraint.ConstraintLayout>
