<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.zumbolovsky.pesoeimc.PesoCalculoActivity">

    <TextView
        android:id="@+id/txtAlturaIdeal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="194dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/textoAltura"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtAlturaIdeal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="153dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAlturaIdeal"
        android:labelFor="@+id/edtAlturaIdea" />

    <TextView
        android:id="@+id/txtResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:text="@string/textoResultado"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnCalcularIdeal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtAlturaIdeal" />

    <Button
        android:id="@+id/btnCalcularIdeal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="217dp"
        android:layout_marginEnd="148dp"
        android:layout_marginStart="16dp"
        android:text="@string/botaoCalcular"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
