<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.zumbolovsky.pesoeimc.ImcActivity">

    <TextView
        android:id="@+id/txtAlturaImc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="194dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/textoAltura"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.057"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtAlturaImc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="153dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAlturaImc" />

    <TextView
        android:id="@+id/txtPesoImc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="194dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/textoPeso"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtAlturaImc" />

    <EditText
        android:id="@+id/edtPesoImc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="153dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPesoImc" />

    <Button
        android:id="@+id/btnCalcularImc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="244dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/botaoCalcular"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPesoImc" />

</android.support.constraint.ConstraintLayout>
